Remove mets language and fix exercise group

--- a/administrator/language/es-ES/es-ES.ini
+++ b/administrator/language/es-ES/es-ES.ini
@@ -946,6 +946,7 @@ COM_METS_MOD_CONFIG_HEADER="Configuraci&oacute;n"
 
 COM_METS_MOD_GYM_EXERCISES="Listado de ejercicios"
 COM_METS_MOD_GYM_EXERCISES_GROUP="Grupos de ejercicios"
+COM_METS_MOD_GYM_EXERCISES_GROUP_CROSSFIT="Grupos de ejercicios Crossfit"
 COM_METS_MOD_GYM_MUSCLES="Listado de musculos"
 COM_METS_MOD_GYM_EQUIPMENT="Listado de equipamiento"
 COM_METS_MOD_GYM_ZONE="Listado de zonas"
